fix subtitle overlap

--- a/src/styles/pages/_interior.scss
+++ b/src/styles/pages/_interior.scss
@@ -80,10 +80,16 @@
 	}
 
 	&-subtitle {
+		$mb: math.div(20,16);
 		@include getType('caption');
-		$translate: calc(100% - 2em);
-		flex-grow: 1;
-		transform: translateY($translate);
+		margin-bottom: #{$mb}em;
+		
+		&--projects {
+			$translate: calc(100% - 2em);
+			flex-grow: 1;
+			transform: translateY($translate);
+		}
+
 	}
 
 	&-prompt {
